samples/_failures_safe/1761639187_31a03f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d993421a.c: In function ‘main’:
./samples/SAFE/__tmp_d993421a.c:136:26: error: missing terminating " character
  136 |         cols2 = read_int("Enter columns for second matrix (1
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d993421a.c:136:9: error: expected expression at end of input
  136 |         cols2 = read_int("Enter columns for second matrix (1
      |         ^~~~~
./samples/SAFE/__tmp_d993421a.c:136:17: error: too few arguments to function ‘read_int’
  136 |         cols2 = read_int("Enter columns for second matrix (1
      |                 ^~~~~~~~
./samples/SAFE/__tmp_d993421a.c:52:5: note: declared here
   52 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_d993421a.c:136:9: error: expected declaration or statement at end of input
  136 |         cols2 = read_int("Enter columns for second matrix (1
      |         ^~~~~
./samples/SAFE/__tmp_d993421a.c:136:9: error: expected declaration or statement at end of input
